[gd_scene load_steps=5 format=3 uid="uid://dc4e3mvd7rgmk"]

[ext_resource type="Script" path="res://uiComponents/game_play_ui.gd" id="1_8ktom"]
[ext_resource type="Texture2D" uid="uid://bj2tdq15sxipn" path="res://sprite_2.png" id="2_lxb2f"]
[ext_resource type="Texture2D" uid="uid://dcndu2t3lwwn1" path="res://sprite_1.png" id="3_phdot"]
[ext_resource type="Texture2D" uid="uid://bj3a8icytoi0y" path="res://sprite_0.png" id="4_shx8p"]

[node name="GamePlayUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8ktom")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -576.0
offset_right = 576.0
offset_bottom = 29.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="LengthContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
alignment = 1

[node name="BodySegSpriteL" type="TextureRect" parent="PanelContainer/HBoxContainer/LengthContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
texture = ExtResource("2_lxb2f")
expand_mode = 2
stretch_mode = 4

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/LengthContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "<Length>"
horizontal_alignment = 1

[node name="BodySegSpriteR" type="TextureRect" parent="PanelContainer/HBoxContainer/LengthContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
texture = ExtResource("2_lxb2f")
expand_mode = 2
stretch_mode = 4

[node name="ScoreContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
alignment = 1

[node name="AppleSpriteL" type="TextureRect" parent="PanelContainer/HBoxContainer/ScoreContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
texture = ExtResource("3_phdot")
expand_mode = 2
stretch_mode = 4

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/ScoreContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "<Score>"
horizontal_alignment = 1

[node name="AppleSpriteR" type="TextureRect" parent="PanelContainer/HBoxContainer/ScoreContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
texture = ExtResource("3_phdot")
expand_mode = 2
stretch_mode = 4

[node name="TimeContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
alignment = 1

[node name="ClockSpriteL" type="TextureRect" parent="PanelContainer/HBoxContainer/TimeContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
texture = ExtResource("4_shx8p")
expand_mode = 2
stretch_mode = 4

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/TimeContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "<time:time>"
horizontal_alignment = 1

[node name="ClockSpriteR" type="TextureRect" parent="PanelContainer/HBoxContainer/TimeContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
texture = ExtResource("4_shx8p")
expand_mode = 2
stretch_mode = 4
